--- a/.env
+++ b/.env
@@ -22,3 +22,5 @@ TOKEN_URI="https://oauth2.googleapis.com/token"
 AUTH_PROVIDER_X509_CERT_URL="https://www.googleapis.com/oauth2/v1/certs"
 CLIENT_X509_CERT_URL="https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-ezwbt%40fitfirst-d5bcd.iam.gserviceaccount.com"
 UNIVERSE_DOMAIN="googleapis.com"
+
+APP_URL="http://localhost:3000"
