--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.12.0",
     "@hapi/hapi": "^21.3.10",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
