--- a/.github/workflows/ci-cd-backend.yaml
+++ b/.github/workflows/ci-cd-backend.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           echo "HOST: \"${{ secrets.HOST }}\"" > .env.yaml
           echo "APP_URL: \"${{ secrets.APP_URL }}\"" >> .env.yaml
-          echo "GCP_SA_KEY: '${{ secrets.GCP_SA_KEY }}'" >> .env.yaml
+          echo "BUCKET_KEY: \"${{ secrets.BUCKET_KEY }}\"" >> .env.yaml
           echo "CREATE_COURSE_API: \"${{ secrets.CREATE_COURSE_API }}\"" >> .env.yaml
           echo "GENERATE_CHAPTERS_API: \"${{ secrets.GENERATE_CHAPTERS_API }}\"" >> .env.yaml
           echo "API_KEY: \"${{ secrets.API_KEY }}\"" >> .env.yaml
