--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^9.23.0",
     "firebase-admin": "^12.2.0",
+    "got": "^14.4.2",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
